--- a/index.html
+++ b/index.html
@@ -1,96 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/MasonGroup/masongroup.github.io/main/Freemasonry.ico?token=GHSAT0AAAAAACOMMXWAN3B7EVJ2WX4XPHJ4ZPMFIDA">
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/MasonGroup/masongroup.github.io/main/Freemasonry.ico?token=GHSAT0AAAAAACOMMXWAN3B7EVJ2WX4XPHJ4ZPMFIDA">
-    <meta property="og:title" content="MasonWebSite - Overview">
-    <meta property="og:description" content="We hereby declare that we disclaim any liability for any improper use of the software Thank you for your understanding">
-    <meta property="og:image" content="https://i.ibb.co/8MBwKgd/Free-Mason.jpg">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="1200">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Freemasonry</title>
+<html lang="en"><head>
+  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/gW0X384/Trollface-non-free.png"><meta property="og:title" content="ABOLHB"><meta property="og:description" content="I am ABOLHB, and my hobby is collecting stamps and destroying regulations"><meta property="og:image" content="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp"><meta property="og:image:width" content="1200">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>About</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .navbar {
-            position: relative;
-            width: 100%;
-            height: 60px;
-            z-index: 1000;
-            overflow: hidden;
-            background-image: url('https://i.ibb.co/cDKdgZv/V8C36xl.png');
-            background-size: 200% 200%;
-            animation: wave 3s infinite alternate;
-        }
-        @keyframes wave {}
-        .navbar ul {
-            list-style-type: none;
-            display: flex;
-            justify-content: space-around;
-            align-items: flex-start;
-            height: 100%;
-        }
-        .navbar li {
-            margin: 10px 15px 0;
-        }
-        .navbar a {
-            text-decoration: none;
-            color: #ffffff;
-            font-weight: bold;
-            font-size: 20px;
-            transition: color 0.3s ease;
-        }
-        .navbar a:hover {
-            color: #6f42c1;
-        }
-        .navbar hr {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 1px;
-            background-color: #6f42c1;
-            border: none;
-            margin: 0;
-            padding: 0;
-        }
-        .content {
-            position: absolute;
-            top: 60px;
-            left: 0;
-            width: 100%;
-            height: calc(100vh - 60px);
-            overflow: hidden;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url('https://i.ibb.co/M18SVpN/1354126.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: transparent; 
+  -webkit-background-clip: text; 
+  background-clip: text;
+  text-align: center;
+  padding-top: 100px;
+  animation: glitch 1s infinite alternate-reverse; 
+}
+h1 {
+  color: transparent;
+  font-size: 36px;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+p {
+  line-height: 1.6;
+  font-size: 20px;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+ul li {
+  margin-bottom: 10px;
+}
+ul li a {
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+}
+ul li a:hover {
+  color: #0056b3;
+}
+.profile-img {
+  display: block;
+  margin: 0 auto;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border: 5px solid #4babd8;
+}
+button {
+  background-color: #000000;
+  color: #adadad;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 0 10px #adadad;
+}
+button:hover {
+  background-color: #222222;
+}
+#video-container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+video {
+  width: 100%;
+}
     </style>
 </head>
 <body>
-<div class="navbar">
-    <ul>
-        <li><a href="#" onclick="changeDomain('Victims')">Victims</a></li>
-        <li><a href="#" onclick="changeDomain('Projects')">Projects</a></li>
-        <li><a href="#" onclick="changeDomain('NeptuneRAT')">NeptuneRat</a></li>
-        <li><a href="#" onclick="changeDomain('r00tkit')">Rootkit</a></li>
-    </ul>
-    <hr>
-</div>
-<div class="content">
-    <iframe id="iframe" src="https://freemasonry.cc/Projects" frameborder="0" style="display: block;"></iframe>
-</div>
-<script>
-function changeDomain(target) {
-    window.history.pushState({}, '', '/#' + target);
-    document.getElementById('iframe').src = 'https://freemasonry.cc/' + target;
-}
-</script>
-</body>
-</html>
+    <div class="container">
+            <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
+        </div>
+        <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
+        <h1 id="heading"><span style="font-family: 'Courier New', monospace; color: #8ffcb0;">ABOLHB</span></h1>
+        <p id="about"><span style="font-family: 'Courier New', monospace; color: #000000;">Welcome to my About</span></p>
+        <p id="connect"><span style="font-family: 'Courier New', monospace; color: #000000;">You can connect with me on social media</span></p>
+        <ul id="social-links">
+            <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
+                      <li id="instagram-link"><a href="https://www.youtube.com/channel/UCJSUHvvrOUdn4iK9Mndd-Cg">Youtube</a></li>
+            <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
+        </ul>
+
+</body></html>
