--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en"><head>
-  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/gW0X384/Trollface-non-free.png"><meta property="og:title" content="ABOLHB"><meta property="og:description" content="I am ABOLHB, and my hobby is collecting stamps and destroying regulations"><meta property="og:image" content="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp"><meta property="og:image:width" content="1200">
+  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/gW0X384/Trollface-non-free.png"><meta property="og:title" content="ABOLHB"><meta property="og:description" content="505 WE CLIMB THE PEAKS"><meta property="og:image" content="https://i.ibb.co/MDC1GvR/QHT.jpg"><meta property="og:image:width" content="1200">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
@@ -8,7 +8,7 @@
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('https://i.ibb.co/M18SVpN/1354126.jpg');
+  background-image: url('windows_xp.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   color: transparent; 
@@ -77,6 +77,8 @@ video {
 </head>
 <body>
     <div class="container">
+            </video>
+            </ul>
             <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
         </div>
         <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
@@ -85,8 +87,7 @@ video {
         <p id="connect"><span style="font-family: 'Courier New', monospace; color: #000000;">You can connect with me on social media</span></p>
         <ul id="social-links">
             <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
-                      <li id="instagram-link"><a href="https://www.youtube.com/channel/UCJSUHvvrOUdn4iK9Mndd-Cg">Youtube</a></li>
-            <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
+            <li id="instagram-link"><a href="https://www.instagram.com/lhwne">Instagram</a></li>
+            <li id="instagram-link"><a href="https://github.com/MasonGroup">Github</a></li>
         </ul>
-
 </body></html>
