--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('windows_xp.jpg');
+  background-image: url('./windows_xp.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   color: transparent; 
