--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ video {
         <p id="connect"><span style="font-family: 'Courier New', monospace; color: #000000;">You can connect with me on social media</span></p>
         <ul id="social-links">
             <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
-            <li id="instagram-link"><a href="https://www.instagram.com/lhwne">Instagram</a></li>
+            <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
             <li id="instagram-link"><a href="https://github.com/MasonGroup">Github</a></li>
         </ul>
 </body></html>
