--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <link rel="icon" type="image/x-icon" href="https://i.ibb.co/gW0X384/Trollface-non-free.png"><meta property="og:title" content="ABOLHB"><meta property="og:description" content="505 WE CLIMB THE PEAKS"><meta property="og:image" content="https://i.ibb.co/MDC1GvR/QHT.jpg"><meta property="og:image:width" content="1200">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About</title>
+    <title>whoami</title>
     <style>
         body {
   font-family: Arial, sans-serif;
@@ -87,6 +87,7 @@ video {
         <p id="connect"><span style="font-family: 'Courier New', monospace; color: #000000;">You can connect with me on social media</span></p>
         <ul id="social-links">
             <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
+            <li id="discord-link"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
             <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
             <li id="instagram-link"><a href="https://github.com/MasonGroup">Github</a></li>
         </ul>
