--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en"><head>
-  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/gW0X384/Trollface-non-free.png"><meta property="og:title" content="whoami"><meta property="og:description" content="505 WE CLIMB THE PEAKS"><meta property="og:image" content="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.web"><meta property="og:image:width" content="1200">
+  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/gW0X384/Trollface-non-free.png"><meta property="og:title" content="whoami"><meta property="og:description" content="Would you like to collect information about me, little boy? Visit my website and learn more about me"><meta property="og:image" content="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.web"><meta property="og:image:width" content="1200">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>desktop-6rf4n6b\abolhb</title>
