--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html lang="en"><head>
-  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/7411w6y/pngegg-10.png"><meta property="og:title" content="whoami"><meta property="og:description" content="Would you like to collect information about me, little boy? Visit my website and learn more about me"><meta property="og:image" content="https://i.ibb.co/7411w6y/pngegg-10.png"><meta property="og:image:width" content="1200">
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/7411w6y/pngegg-10.png">
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/7411w6y/pngegg-10.png">
+      <link rel="icon">
+      <meta property="og:title" content="whoami"><meta property="og:description" content="Would you like to collect information about me, little boy? Visit my website and learn more about me"><meta property="og:image" content=https://i.ibb.co/7411w6y/pngegg-10.png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="1200"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>desktop-6rf4n6b\abolhb</title>
