--- a/index.html
+++ b/index.html
@@ -1,98 +1,101 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/pngeg.ico">
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/pngeg.ico">
-      <link rel="icon">
-      <meta property="og:title" content="whoami"><meta property="og:description" content="Would you like to collect information about me, little boy? Visit my website and learn more about me"><meta property="og:image" content=https://i.ibb.co/7411w6y/pngegg-10.png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="1200"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="whoami">
+    <meta property="og:description" content="Would you like to collect information about me, little boy? Visit my website and learn more about me">
+    <meta property="og:image" content="https://i.ibb.co/7411w6y/pngegg-10.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="1200">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>desktop-6rf4n6b\abolhb</title>
     <style>
         body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-image: url('./windows_xp.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: transparent; 
-  -webkit-background-clip: text; 
-  background-clip: text;
-  text-align: center;
-  padding-top: 100px;
-  animation: glitch 1s infinite alternate-reverse; 
-}
-h1 {
-  color: transparent;
-  font-size: 36px;
-  -webkit-background-clip: text;
-  background-clip: text;
-}
-p {
-  line-height: 1.6;
-  font-size: 20px;
-}
-ul {
-  list-style-type: none;
-  padding: 0;
-  text-align: center;
-}
-ul li {
-  margin-bottom: 10px;
-}
-ul li a {
-  text-decoration: none;
-  color: #007bff;
-  font-weight: bold;
-}
-ul li a:hover {
-  color: #0056b3;
-}
-.profile-img {
-  display: block;
-  margin: 0 auto;
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  border: 5px solid #4babd8;
-}
-button {
-  background-color: #000000;
-  color: #adadad;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 5px;
-  cursor: pointer;
-  box-shadow: 0 0 10px #adadad;
-}
-button:hover {
-  background-color: #222222;
-}
-#video-container {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-video {
-  width: 100%;
-}
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-image: url('https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: transparent; 
+            -webkit-background-clip: text; 
+            background-clip: text;
+            text-align: center;
+            padding-top: 100px;
+            animation: glitch 1s infinite alternate-reverse;
+        }
+        h1 {
+            color: transparent;
+            font-size: 36px;
+            -webkit-background-clip: text;
+            background-clip: text;
+        }
+        p {
+            line-height: 1.6;
+            font-size: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: center;
+        }
+        ul li {
+            margin-bottom: 10px;
+        }
+        ul li a {
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+        }
+        ul li a:hover {
+            color: #0056b3;
+        }
+        .profile-img {
+            display: block;
+            margin: 0 auto;
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border: 5px solid #4babd8;
+        }
+        button {
+            background-color: #000000;
+            color: #adadad;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 0 10px #adadad;
+        }
+        button:hover {
+            background-color: #222222;
+        }
+        #video-container {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        video {
+            width: 100%;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-            
-            
-            <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
-        </div>
-        <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
-        <h1 id="heading"><span style="font-family: 'Courier New', monospace; color: #8ffcb0;">ABOLHB</span></h1>
-        <p id="about"><span style="font-family: 'Courier New', monospace; color: #000000;">Welcome to my About</span></p>
-        <p id="connect"><span style="font-family: 'Courier New', monospace; color: #000000;">You can connect with me on social media</span></p>
-        <ul id="social-links">
-            <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
-          <li id="youtube-link"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
-            <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
-            <li id="github-link"><a href="https://github.com/MasonGroup">Github</a></li>
-        </ul>
-
-</body></html>
+        <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
+    </div>
+    <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
+    <h1 id="heading"><span style="font-family: 'Courier New', monospace; color: #8ffcb0;">ABOLHB</span></h1>
+    <p id="about"><span style="font-family: 'Courier New', monospace; color: #000000;">Welcome to my About</span></p>
+    <p id="connect"><span style="font-family: 'Courier New', monospace; color: #000000;">You can connect with me on social media</span></p>
+    <ul id="social-links">
+        <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
+        <li id="youtube-link"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
+        <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
+        <li id="github-link"><a href="https://github.com/MasonGroup">Github</a></li>
+    </ul>
+</body>
+</html>
