--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
             color: transparent; 
             -webkit-background-clip: text; 
             background-clip: text;
             text-align: center;
             padding-top: 100px;
             animation: glitch 1s infinite alternate-reverse;
+        }
+        .background-image {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            object-fit: cover;
         }
         h1 {
             color: transparent;
@@ -84,6 +89,7 @@
     </style>
 </head>
 <body>
+    <img draggable="false" src="https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg" alt="Rich Presence User Interface" class="background-image">
     <div class="container">
         <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
     </div>
