--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/pngeg.ico">
     <meta property="og:title" content="whoami">
     <meta property="og:description" content="Would you like to collect information about me, little boy? Visit my website and learn more about me">
-    <meta property="og:image" content="https://i.ibb.co/7411w6y/pngegg-10.png">
+    <meta property="og:image" content="https://i.ibb.co/B4nZ9nP/dguizq9-c28a037e-57d5-4bf4-b321-f62c967acbb1.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
     <meta charset="UTF-8">
