--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/pngeg.ico">
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
     <meta property="og:title" content="whoami">
     <meta property="og:description" content="Would you like to collect information about me, little boy? Visit my website and learn more about me">
     <meta property="og:image" content="https://i.ibb.co/B4nZ9nP/dguizq9-c28a037e-57d5-4bf4-b321-f62c967acbb1.png">
