--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
     <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
     <h1 id="heading"><span style="font-family: 'Courier New', monospace; color: #8ffcb0;">ABOLHB</span></h1>
-    <p id="about"><span style="font-family: 'Courier New', monospace; color: #000000;">Welcome to my About</span></p>
+    <p id="about"><span style="font-family: 'Courier New', monospace; color: #000000;">Welcome to my about</span></p>
     <p id="connect"><span style="font-family: 'Courier New', monospace; color: #000000;">You can connect with me on social media</span></p>
     <ul id="social-links">
         <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
