--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
     <meta property="og:title" content="whoami">
-    <meta property="og:description" content="Would you like to collect information about me, little boy? Visit my website and learn more about me">
+    <meta property="og:description" content="Хотите узнать обо мне больше, мальчик? Посетите мой веб-сайт и узнайте больше обо мне">
     <meta property="og:image" content="https://i.ibb.co/B2sw8JS/pngegg-10.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
