--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
     <meta property="og:title" content="whoami">
     <meta property="og:description" content="Хотите узнать обо мне больше, мальчик? Посетите мой веб-сайт и узнайте больше обо мне">
@@ -9,8 +7,8 @@
     <meta property="og:image:height" content="1200">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>desktop-6rf4n6b\abolhb</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Playfair+Display:wght@400;700&family=Poppins:wght@400;600&display=swap">
+    <title>141.179.118.230</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;family=Playfair+Display:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -111,16 +109,18 @@
         }
     </style>
 </head>
-<body>
+<body class="loaded">
     <img draggable="false" src="https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg" alt="Rich Presence User Interface" class="background-image">
-    <div class="container content">
+    <div class="container content visible">
         <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
     </div>
-    <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img content">
-    <h1 id="heading" class="content"><span id="user-ip">ABOLHB</span></h1>
-    <p id="about" class="content">Welcome to my about</p>
-    <p id="connect" class="content">You can connect with me on social media</p>
-    <ul id="social-links" class="content">
+    <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img content visible">
+    <h1 id="heading" class="content visible"><span id="user-ip">ABOLHB</span>
+    <p id="about" class="content visible">Welcome to my about</p>
+<p id="connect" class="content visible">Hello! My name is abolhb, and I'm delighted to share a bit about myself. I have a passion for collecting stamps, which I find both fascinating and rewarding. Additionally, I have a keen interest in understanding and dismantling electronic devices, which has led me to experiment with various gadgets and technologies. I was born in Moscow, and my experiences growing up there have greatly influenced my hobbies and interests. I'm always eager to learn and explore new things, and I look forward to connecting with like-minded individuals who share my enthusiasm for collecting and technology.
+
+</p>
+    <ul id="social-links" class="content visible">
         <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
         <li id="youtube-link"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
         <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
@@ -150,5 +150,6 @@
             }
         }
     </script>
-</body>
-</html>
+
+
+</body></html>
