--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
     <h1 id="heading" class="content visible"><span id="user-ip">ABOLHB</span></h1>
     <p id="about" class="content visible">Welcome to my about</p>
 
-<p id="connect" class="content visible">Hello! My name is abolhb, and I'm delighted to share a bit about myself. I have a passion for collecting stamps, which I find both fascinating and rewarding. Additionally, I have a keen interest in understanding and dismantling electronic devices, which has led me to experiment with various gadgets and technologies. I was born in Moscow, and my experiences growing up there have greatly influenced my hobbies and interests. I'm always eager to learn and explore new things, and I look forward to connecting with like-minded individuals who share my enthusiasm for collecting and technology.
-
+<p id="connect" class="content visible">Hello! My name is abolhb My hobbies include collecting stones, gathering victims, and destroying devices I was born in Moscow.
 </p>
     <ul id="social-links" class="content visible">
         <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
