--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 <p id="connect" class="content visible">Hello! My name is abolhb My hobbies include collecting stones, gathering victims, and destroying devices I was born in Moscow.
 </p>
     <ul id="social-links" class="content visible">
+        <li id="victims-link"><a href="https://z7f.xyz/">MyVictims</a></li>
         <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
         <li id="youtube-link"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
         <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
