--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         p {
-            line-height: 1.8;
-            font-size: 22px;
-            font-family: 'Roboto', sans-serif;
-            color: #000000;
+    line-height: 1.8;
+    font-size: 22px;
+    font-family: 'Roboto', sans-serif;
+    color: #000000;
+    margin: 0;
         }
         ul {
             list-style-type: none;
@@ -117,9 +118,7 @@
     <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img content visible">
     <h1 id="heading" class="content visible"><span id="user-ip">ABOLHB</span></h1>
     <p id="about" class="content visible">Welcome to my about</p>
-
-<p id="connect" class="content visible">Hello! My name is abolhb My hobbies include collecting stones, gathering victims, and destroying devices I was born in Moscow.
-</p>
+<p id="connect" class="content visible">Hello! My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in Moscow</p>
     <ul id="social-links" class="content visible">
         <li id="victims-link"><a href="https://z7f.xyz/">MyVictims</a></li>
         <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
