--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
     <meta property="og:title" content="whoami">
-    <meta property="og:description" content="Хотите узнать обо мне больше, мальчик? Посетите мой веб-сайт и узнайте больше обо мне">
+    <meta property="og:description" content="Меня зовут аболхб, мои увлечения включают коллекционирование камней, сбор жертв и уничтожение устройств Я родился в Москве">
     <meta property="og:image" content="https://i.ibb.co/B2sw8JS/pngegg-10.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="1200">
@@ -118,7 +118,7 @@
     <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img content visible">
     <h1 id="heading" class="content visible"><span id="user-ip">ABOLHB</span></h1>
     <p id="about" class="content visible">Welcome to my about</p>
-<p id="connect" class="content visible">Hello! My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in Moscow</p>
+<p id="connect" class="content visible">My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in Moscow</p>
     <ul id="social-links" class="content visible">
         <li id="victims-link"><a href="https://z7f.xyz/">MyVictims</a></li>
         <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
