--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image:height" content="1200">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>141.179.118.230</title>
+    <title>desktop-6rf4n6b\lhwbe</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;family=Playfair+Display:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap">
     <style>
         body {
