--- a/index.html
+++ b/index.html
@@ -1,129 +1,257 @@
+<!DOCTYPE html>
 <html lang="en"><head>
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
-    <meta property="og:title" content="whoami">
-    <meta property="og:description" content="Меня зовут аболхб, мои увлечения включают коллекционирование камней, сбор жертв и уничтожение устройств Я родился в Москве">
-    <meta property="og:image" content="https://i.ibb.co/B2sw8JS/pngegg-10.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="1200">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>desktop-6rf4n6b\lhwbe</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;family=Playfair+Display:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            color: transparent; 
-            -webkit-background-clip: text; 
-            background-clip: text;
-            text-align: center;
-            padding-top: 100px;
-            opacity: 0;
-            transition: opacity 1s ease-in;
-        }
-        body.loaded {
-            opacity: 1;
-        }
-        .background-image {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            object-fit: cover;
-        }
-        .content {
-            opacity: 0;
-            transition: opacity 0.5s ease-in;
-        }
-        .content.visible {
-            opacity: 1;
-        }
-        h1 {
-            font-family: 'Playfair Display', serif;
-            font-size: 48px;
-            color: #8ffcb0;
-            background: linear-gradient(45deg, #8ffcb0, #4babd8);
-            -webkit-background-clip: text;
-            background-clip: text;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
-        p {
-    line-height: 1.8;
-    font-size: 22px;
-    font-family: 'Roboto', sans-serif;
-    color: #000000;
-    margin: 0;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: center;
-        }
-        ul li {
-            margin-bottom: 15px;
-        }
-        ul li a {
-            text-decoration: none;
-            color: #007bff;
-            font-family: 'Poppins', sans-serif;
-            font-weight: 600;
-            font-size: 18px;
-            transition: color 0.3s, text-shadow 0.3s;
-        }
-        ul li a:hover {
-            color: #007bff;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-        }
-        .profile-img {
-            display: block;
-            margin: 0 auto;
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-            border: 5px solid #4babd8;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-        }
-        button {
-            background-color: #000000;
-            color: #adadad;
-            border: none;
-            padding: 12px 24px;
-            font-size: 18px;
-            border-radius: 8px;
-            cursor: pointer;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-            font-family: 'Roboto', sans-serif;
-        }
-        button:hover {
-            background-color: #222222;
-        }
-        #video-container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        video {
-            width: 100%;
-        }
-    </style>
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
+  <meta property="og:title" content="whoami">
+  <meta property="og:description" content="Меня зовут аболхб, мои увлечения включают коллекционирование камней, сбор жертв и уничтожение устройств Я родился в Москве">
+  <meta property="og:image" content="https://i.ibb.co/B2sw8JS/pngegg-10.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="1200">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>desktop-6rf4n6b\lhwbe</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,700|Dancing+Script:400,700');
+    body {
+      margin: 0;
+      height: 100vh;
+      overflow: hidden;
+      font-family: 'Roboto', sans-serif;
+      background: #000;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+    }
+    .container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+    .loading, .main {
+      position: absolute;
+      top: -5px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+    .loading {
+      z-index: 1;
+      background: #000;
+    }
+    .loading .container {
+      width: 150px;
+      height: 10px;
+      border: 2px solid #b2b2b2;
+      border-radius: 7px;
+      margin: 0 auto;
+      padding: 2px 1px;
+      overflow: hidden;
+      font-size: 0;
+    }
+    .loading .box {
+      width: 9px;
+      height: 100%;
+      background: linear-gradient(to bottom, #2838c7 0%, #5979ef 17%, #869ef3 32%, #869ef3 45%, #5979ef 59%, #2838c7 100%);
+      display: inline-block;
+      margin-right: 2px;
+      animation: loader 2s infinite;
+      animation-timing-function: linear;
+    }
+    .loading .logo {
+      text-align: center;
+      width: 220px;
+    }
+    .loading .logo p {
+      margin: 0;
+      padding: 0;
+    }
+    .top {
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 16px;
+    }
+    .top:after {
+      content: "\00a9";
+      font-size: 10px;
+      position: relative;
+      top: -5px;
+      margin-left: 2px;
+    }
+    .loading .mid {
+      font-size: 46px;
+      font-weight: 700;
+      line-height: 36px;
+    }
+    .loading .mid span {
+      font-size: 22px;
+      display: inline-block;
+      vertical-align: top;
+      color: #FF6821;
+      margin-top: -8px;
+    }
+    .loading .bottom {
+      font-size: 30px;
+      font-weight: 300;
+      line-height: 30px;
+      margin-left: 5px;
+    }
+    @keyframes loader {
+      0% {
+        transform: translateX(-30px);
+      }
+      100% {
+        transform: translateX(150px);
+      }
+    }
+    .main {
+      opacity: 0;
+      transition: opacity 1s ease-in;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      padding: 0;
+    }
+    .main.loaded {
+      opacity: 1;
+    }
+    .main .background-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      object-fit: cover;
+    }
+    .main .content {
+      text-align: center;
+      width: 100%;
+      max-width: 800px;
+      margin: 0 auto;
+      opacity: 0;
+      transition: opacity 0.5s ease-in;
+    }
+    .main .content.visible {
+      opacity: 1;
+    }
+    .main h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 48px;
+      color: #8ffcb0;
+      background: linear-gradient(45deg, #8ffcb0, #4babd8);
+      -webkit-background-clip: text;
+      background-clip: text;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      margin: 20px 0;
+    }
+    .main p {
+      font-family: 'Dancing Script', cursive;
+      font-size: 22px;
+      color: #000000;
+      line-height: 1.5;
+      margin: 0 0 10px;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    }
+    .main ul {
+      list-style-type: none;
+      padding: 0;
+      text-align: center;
+      margin: 0;
+    }
+    .main ul li {
+      margin-bottom: 15px;
+    }
+    .main ul li a {
+      text-decoration: none;
+      color: #007bff;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 600;
+      font-size: 18px;
+      transition: color 0.3s, text-shadow 0.3s;
+    }
+    .main ul li a:hover {
+      color: #0056b3;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+    }
+    .main .profile-img {
+      display: block;
+      margin: 0 auto;
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border: 5px solid #4babd8;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      margin-bottom: 20px;
+    }
+    .main button {
+      background-color: #000000;
+      color: #adadad;
+      border: none;
+      padding: 12px 24px;
+      font-size: 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      font-family: 'Roboto', sans-serif;
+      margin-top: 20px;
+    }
+    .main button:hover {
+      background-color: #222222;
+    }
+  </style>
 </head>
-<body class="loaded">
-    <img draggable="false" src="https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg" alt="Rich Presence User Interface" class="background-image">
-    <div class="container content visible">
-        <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
+<body>
+  <div class="container">
+    <div class="loading">
+      <div class="logo">
+        <p class="top">Microsoft</p>
+        <p class="mid">Windows<span>XP</span></p>
+        <p class="bottom">Professional</p>
+      </div>
+      <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
     </div>
-    <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img content visible">
-    <h1 id="heading" class="content visible"><span id="user-ip">ABOLHB</span></h1>
-    <p id="about" class="content visible">Welcome to my about</p>
-<p id="connect" class="content visible">My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in Moscow</p>
-    <ul id="social-links" class="content visible">
-        <li id="victims-link"><a href="https://z7f.xyz/">MyVictims</a></li>
-        <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
-        <li id="youtube-link"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
-        <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
-        <li id="github-link"><a href="https://github.com/MasonGroup">Github</a></li>
-    </ul>
-</body></html>
+    <div class="main">
+      <img draggable="false" src="https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg" alt="Rich Presence User Interface" class="background-image">
+      <div class="content visible">
+        <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
+        <h1 id="heading"><span id="user-ip">ABOLHB</span></h1>
+        <p id="about">Welcome to my about</p>
+        <p id="connect">My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in Moscow</p>
+        <ul id="social-links">
+          <li id="victims-link"><a href="https://z7f.xyz/">MyVictims</a></li>
+          <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
+          <li id="youtube-link"><a href="https://www.youtube.com/@ABOLHB">Youtube</a></li>
+          <li id="instagram-link"><a href="https://www.instagram.com/lhwbe">Instagram</a></li>
+          <li id="github-link"><a href="https://github.com/MasonGroup">Github</a></li>
+        </ul>
+        <button id="refresh-btn" style="display: none;" onclick="location.reload()">Back</button>
+      </div>
+    </div>
+  </div>
+  <script>
+    setTimeout(function() {
+      document.querySelector('.loading').style.display = 'none';
+      document.querySelector('.main').style.display = 'flex';
+      setTimeout(function() {
+        document.querySelector('.main').classList.add('loaded');
+        document.querySelectorAll('.main .content').forEach(function(element) {
+          element.classList.add('visible');
+        });
+      }, 300);
+    }, 3000); 
+  </script>
+</body>
+</html>
