--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
   <meta property="og:title" content="whoami">
-  <meta property="og:description" content="Меня зовут аболхб, мои увлечения включают коллекционирование камней, сбор жертв и уничтожение устройств Я родился в Москве">
+  <meta property="og:description" content="Меня зовут аболхб мои увлечения включают коллекционирование камней сбор жертв и уничтожение устройств Я родился в Москве">
   <meta property="og:image" content="https://i.ibb.co/B2sw8JS/pngegg-10.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="1200">
