--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
   <meta property="og:title" content="whoami">
-  <meta property="og:description" content="Меня зовут аболхб мои увлечения включают коллекционирование камней сбор жертв и уничтожение устройств Я родился в Москве">
+  <meta property="og:description" content="Меня зовут аболхб, мои увлечения включают коллекционирование камней, сбор жертв и уничтожение устройств Я родился в Москве">
   <meta property="og:image" content="https://i.ibb.co/B2sw8JS/pngegg-10.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="1200">
@@ -224,12 +224,15 @@
       </div>
     </div>
     <div class="main">
+      <audio autoplay>
+        <source src = "https://ia801805.us.archive.org/8/items/505_20240731/505.mp3" type="audio/mp3"/>
+        </audio>
       <img draggable="false" src="https://raw.githubusercontent.com/eq44/eq44.github.io/main/windows_xp.jpg" alt="Rich Presence User Interface" class="background-image">
       <div class="content visible">
         <img src="https://i.ibb.co/ccMv0n4/6a3949d4ef06a3037680d0c9fd463787.webp" alt="Profile Image" class="profile-img">
         <h1 id="heading"><span id="user-ip">ABOLHB</span></h1>
         <p id="about">Welcome to my about</p>
-        <p id="connect">My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in Moscow</p>
+        <p id="connect">My name is abolhb my hobbies include collecting stones, gathering victims, and destroying devices i was born in moscow</p>
         <ul id="social-links">
           <li id="victims-link"><a href="https://z7f.xyz/">MyVictims</a></li>
           <li id="discord-link"><a href="https://discord.com/users/593921110832316429">Discord</a></li>
@@ -251,7 +254,7 @@
           element.classList.add('visible');
         });
       }, 300);
-    }, 3000); 
+    }, 9000); 
   </script>
 </body>
 </html>
