--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/eq44/eq44.github.io/main/abolhb.ico">
   <meta property="og:title" content="whoami">
   <meta property="og:description" content="Меня зовут аболхб мои увлечения включают коллекционирование камней сбор жертв и уничтожение устройств Я родился в Москве">
-  <meta property="og:image" content="https://i.ibb.co/B2sw8JS/pngegg-10.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/eq44/eq44.github.io/main/SOVIET.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="1200">
   <meta charset="UTF-8">
